--- a/contact.html
+++ b/contact.html
@@ -19,16 +19,17 @@
         </nav>
     </header>
     <main>
-        <section id="contact">
-            <h2>Get in Touch</h2>
+        <section class="contact-section">
+            <h2>Contact Us</h2>
             <form id="contact-form">
                 <input type="text" placeholder="Your Name" required>
                 <input type="email" placeholder="Your Email" required>
-                <input type="tel" placeholder="Your Phone Number" required>
+                <input type="text" placeholder="Your Phone Number" required>
                 <textarea placeholder="Your Message" required></textarea>
                 <button type="submit">Send Message</button>
             </form>
         </section>
+        
     </main>
     <footer>
         <p>&copy; 2024 EditKaro. All rights reserved.</p>
